# advent-of-code-2025

./: .gitignore  Cargo.toml  README.md
benches/: benches.rs
src/: day01.rs  lib.rs  main.rs
src/python/: day04.py  day05.py  day06.py  day07.py  day08.py  day10.py  day11.py  day12.py
src/rust/: day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  lib.rs  main.rs
