[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2021"
authors = ["Roberto <rob.ariosa@hotmail.com>"]
default-run = "advent-of-code-2025"

[dependencies]
itertools = "0.14.0"

[dev-dependencies]
criterion = "0.8.0"

[[bench]]
name = "benches"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1

# [[bin]]
# name = "day01"
# path = "src/day01.rs"

# [[bin]]
# name = "day02"
# path = "src/day02.rs"

# [[bin]]
# name = "day03"
# path = "src/day03.rs"
