[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2021"
authors = ["Roberto <rob.ariosa@hotmail.com>"]
default-run = "advent-of-code-2025"

[dependencies]
itertools = "0.14.0"
pathfinding = "4.14.0"

[dev-dependencies]
criterion = "0.8.0"

[[bench]]
name = "benches"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1

[lib]
path = "src/rust/lib.rs"

[[bin]]
name = "advent-of-code-2025"
path = "src/rust/main.rs"

[[bin]]
name = "day01"
path = "src/rust/day01.rs"

[[bin]]
name = "day02"
path = "src/rust/day02.rs"

[[bin]]
name = "day03"
path = "src/rust/day03.rs"

[[bin]]
name = "day04"
path = "src/rust/day04.rs"

[[bin]]
name = "day05"
path = "src/rust/day05.rs"

[[bin]]
name = "day06"
path = "src/rust/day06.rs"

[[bin]]
name = "day07"
path = "src/rust/day07.rs"
