[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2024"
authors = ["Roberto <rob.ariosa@hotmail.com>"]
default-run = "advent-of-code-2025"

[dependencies]
cached = "0.56.0"
itertools = "0.14.0"
pathfinding = "4.14.0"
petgraph = "0.8.3"
scanfmt = "0.2.1"
z3 = "0.19.6"

[dev-dependencies]
criterion = "0.8.1"
petgraph = "0.8.3"

[[bench]]
name = "benches"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1

[lib]
path = "src/rust/lib.rs"

[[bin]]
name = "advent-of-code-2025"
path = "src/rust/main.rs"

[[bin]]
name = "day01"
path = "src/rust/day01.rs"

[[bin]]
name = "day02"
path = "src/rust/day02.rs"

[[bin]]
name = "day03"
path = "src/rust/day03.rs"

[[bin]]
name = "day04"
path = "src/rust/day04.rs"

[[bin]]
name = "day05"
path = "src/rust/day05.rs"

[[bin]]
name = "day06"
path = "src/rust/day06.rs"

[[bin]]
name = "day07"
path = "src/rust/day07.rs"

[[bin]]
name = "day08"
path = "src/rust/day08.rs"

[[bin]]
name = "day09"
path = "src/rust/day09.rs"

[[bin]]
name = "day10"
path = "src/rust/day10.rs"

[[bin]]
name = "day11"
path = "src/rust/day11.rs"

[[bin]]
name = "day12"
path = "src/rust/day12.rs"
